# rokey_c_1_collabo2

./: .gitignore  CHANGELOG_2025-12-13.md  CONTROL_METHODS_COMPARISON.md  MPC_README.md  PACKAGE_STRUCTURE.md  README.md  ROS_DOMAIN_ID_SCENARIOS.md  package.xml  setup.py  test_gripper_basic.py  test_gripper_connection.py
1_gripper_setup/: README_GRIPPER_TESTS.md  ROS_DOMAIN_ID_GUIDE.md  test_gripper_advanced.py
2_calibration/: README_CALIBRATION.md  T_gripper2camera.npy  test.py
backend/: app.db  requirements.txt
bbangee/ros2/face_tracking/: package.xml  setup.cfg  setup.py
bbangee/ros2/face_tracking/config/: control.yaml  detection.yaml  tracking.yaml
bbangee/ros2/face_tracking/face_tracking/: __init__.py
bbangee/ros2/face_tracking/face_tracking/control/: __init__.py  joint_tracking_node.py
bbangee/ros2/face_tracking/face_tracking/detection/: __init__.py  face_detection_node.py  yolo_detector.py
bbangee/ros2/face_tracking/face_tracking/tracking/: __init__.py  ekf_filter.py  face_tracking_node.py
bbangee/ros2/face_tracking/face_tracking/utils/: __init__.py  constants.py
bbangee/ros2/face_tracking/models/: yolov8n-face.pt
day1/: Day1_Summary.md  README.md  SEMINAR_GUIDE.md  ai_studio_code (1).html  ai_studio_code (7).html
day2/: 01_Orientation(이론).ipynb  02_Orientation(실습1).ipynb  03_Orientation(실습2).ipynb  04_CNN기본.ipynb
day3/: README.md
day4/: EKF_STATUS.md  EKF_TEST_GUIDE.md  README.md
docs/: ai_studio_code (3).html  ai_studio_code (5).html  ai_studio_code (7).html  index.html  slide01.html  slide02.html  slide03.html  slide04.html  (+7 more)
(+154 files in other folders)
